Shopping cart without pubsub desing pattern

--- a/pubsub-desing-pattern/shopping-cart-demo/shopping-cart-demo/Views/Home/ShoppingCart.cshtml
+++ b/pubsub-desing-pattern/shopping-cart-demo/shopping-cart-demo/Views/Home/ShoppingCart.cshtml
@@ -7,10 +7,19 @@
 
 <div class="panel panel-info">
     <div class="panel-heading">Shopping Cart</div>
+    <div class="panel-body">
+        <ul class="list-group" id="products-added"></ul>
+        <h3>Total Items : <span class="total-items">0</span></h3>
+        <h3>Total Price : <span class="total-price">0</span></h3>
+    </div>
 </div>
 
 <div class="panel panel-primary">
     <div class="panel-heading">Products List</div>
+    <div class="panel-body">
+        <ul class="list-group" id="products-list">
+        </ul>
+    </div>
 </div>
 
 @section scripts{
