--- a/pubsub-desing-pattern/shopping-cart-demo/shopping-cart-demo/Views/Shared/_Layout.cshtml
+++ b/pubsub-desing-pattern/shopping-cart-demo/shopping-cart-demo/Views/Shared/_Layout.cshtml
@@ -25,7 +25,7 @@
                     <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
                 </ul>
                 <ul class="nav navbar-nav navbar-right">
-                    <li><a href="#">Cart <span class="badge">42</span></a></li>
+                    <li><a>Cart <span class="badge"><span class="total-items">0</span> - <span class="total-price">S/0.00</span></a></li>
                 </ul>
             </div>
         </div>
